Remove checker framework
For now. The OpenAPI generator generates stuff that doesn't pass the checks :(