@@ -163,12 +163,6 @@
                             - `processing` because it complains about every annotation
                         -->
                         <arg>-Xlint:all,-serial,-processing</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                     </compilerArgs>
 
                     <showDeprecation>true</showDeprecation>
@@ -179,30 +173,10 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
-                        <path>
-                            <groupId>org.checkerframework</groupId>
-                            <artifactId>checker</artifactId>
-                            <version>${checkerframework.version}</version>
-                        </path>
                     </annotationProcessorPaths>
                     <annotationProcessors>
                         <annotationProcessor>
                             lombok.launch.AnnotationProcessorHider$AnnotationProcessor
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.nullness.NullnessChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.interning.InterningChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.fenum.FenumChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.formatter.FormatterChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.regex.RegexChecker
                         </annotationProcessor>
                     </annotationProcessors>
                 </configuration>
